# TechLogShelf

./: .gitignore  LICENSE  README.md
backend/: .env  Cargo.toml  Dockerfile  docker-compose.yml
backend/src/: main.rs
backend/src/domain/: database.rs
backend/src/model/: database.rs
frontend/tech-log-shelf/: README.md  angular.json  package-lock.json  package.json
frontend/tech-log-shelf/src/: index.html
frontend/tech-log-shelf/src/app/: app.routes.ts  app.spec.ts  app.ts
frontend/tech-log-shelf/src/app/components/collected-stamps/: collected-stamps.component.css  collected-stamps.component.html  collected-stamps.component.ts
frontend/tech-log-shelf/src/app/components/recent-record/: recent-record.component.css  recent-record.component.html  recent-record.component.ts
frontend/tech-log-shelf/src/app/components/stamp-grid/: stamp-grid.component.css  stamp-grid.component.html  stamp-grid.component.ts
frontend/tech-log-shelf/src/app/home/: home.component.css  home.component.html  home.component.ts
frontend/tech-log-shelf/src/app/stores/: app.store.ts
